--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=true
 
+# 访问密码
+ACCESS_PASSWORD=your_password_here
+
 # 目标网站配置 (请根据实际网站填写)
 TARGET_BASE_URL=https://example.com
 VIDEO_LIST_PATH=/videos
