--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ PROXY_BASE_URL=http://localhost:8000
 # 缓存配置
 CACHE_ENABLED=true
 CACHE_TTL=300
+
+# 视频列表缓存有效期（秒），默认12小时
+# VIDEO_LIST_CACHE_TTL=43200
+
+# 已缓存视频列表每页数量，默认20
+# CACHE_PAGE_SIZE=20
